<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>transponder-parent</artifactId>
		<groupId>org.orienteer.transponder</groupId>
		<version>1.1-SNAPSHOT</version>
	</parent>

	<artifactId>transponder-janusgraph</artifactId>

	<name>transponder-janusgraph</name>

	<dependencies>
		<dependency>
			<groupId>org.orienteer.transponder</groupId>
			<artifactId>transponder-core</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.janusgraph</groupId>
			<artifactId>janusgraph-core</artifactId>
			<version>1.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.janusgraph</groupId>
			<artifactId>janusgraph-inmemory</artifactId>
			<version>1.1.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.tinkerpop</groupId>
			<artifactId>gremlin-core</artifactId>
			<version>3.7.3</version>
		</dependency>
		<dependency>
			<groupId>org.orienteer.transponder</groupId>
			<artifactId>transponder-core</artifactId>
			<version>${project.version}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>11</release>
					<encoding>UTF-8</encoding>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>